Bug 145111 - Text block anchor top/left and bottom/left do not work for Fontwork shapes of scale "shape"
Summary: Text block anchor top/left and bottom/left do not work for Fontwork shapes of...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.3
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-13 11:46 UTC by Regina Henschel
Modified: 2021-10-18 08:51 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Example for each of the nine positions of anchor of text block (19.87 KB, application/vnd.oasis.opendocument.presentation)
2021-10-13 11:46 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2021-10-13 11:46:00 UTC
Created attachment 175717 [details]
Example for each of the nine positions of anchor of text block

If a Fontwork shape is defined with the attribute draw:text-path-scale="shape", changing the anchor type in dialog "Text attributes" works for all of positions top/center, middle/center, bottom/center, top/right, middle/right and bottom/right. But top/left and bottom/left do not work. They are rendered same as middle/left.

The attached document has for each case an example. The black dashed line indicates the snap rectangle of the shape. The pink dashed line indicates the sub-paths used in the shape.
Comment 1 Commit Notification 2021-10-15 23:16:25 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/64bacd4f2bd9c8e10e8c9a0b7d18516c77260df3

tdf#145111 evaluate nVertDiff for HORZADJUST_LEFT too

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2021-10-18 08:51:54 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/164ebe08df1cb501235aff99722864556ee6fc2d

tdf#145111 evaluate nVertDiff for HORZADJUST_LEFT too

It will be available in 7.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.